<resources>
    <string name="app_name">FlexAbility</string>
    <string name="register">Εγγραφή</string>
    <string name="login">Σύνδεση</string>
    <string name="back">Πίσω</string>
    <string name="physios">Φυσιοθεραπευτήρια (%1$d)</string>
    <string name="amenities">Παροχές (%1$d)</string>
    <string name="create">Δημιουργία</string>
    <string name="showAll"><u>Προβολή όλων ></u></string>
    <string name="massagexperts">MassageXperts</string>
    <string name="vat">123456789</string>
    <string name="phone">2310444442</string>
    <string name="address">Εγνατία 156, Θεσσαλονίκη, 54636</string>
    <string name="sportsMassage">Αθλητική Μάλαξη</string>
    <string name="id01">ΜΞ001</string>
    <string name="cost">45 / συνεδρία</string>
    <string name="cost2">65 / συνεδρία</string>
    <string name="acupuncture">Βελονισμός</string>
    <string name="desc2">Θεραπευτική μέθοδος που βασίζεται στην παραδοσιακή κινέζικη ιατρική. Ο βελονισμός είναι ένα θεωρητικό, σύνθετο και ολοκληρωμένο σύστημα θεραπείας που η ιστορία του χάνεται στην νύκτα των χρόνων.</string>
    <string name="desc">Είδος θεραπευτικού μασάζ που απευθύνεται σε αθλητές. Τα είδη αθλητικής μάλαξης που έχουν καθιερωθεί είναι τέσσερα.</string>
    <string name="appointments">Ραντεβού</string>
    <string name="counter">(#)</string>
    <string name="start">Έναρξη</string>
    <string name="date">00/00/0000</string>
    <string name="today">Σήμερα</string>
    <string name="tomorrow">Αύριο</string>
    <string name="day">Ημέρα</string>
    <string name="arrow">Arrow</string>
    <string name="time">Ώρα</string>
    <string name="patientsname">Όνομα Ασθενή</string>
    <string name="nameandsurname">Όνομα Επώνυμο</string>
    <string name="amkanumbers">###########</string>
    <string name="amkaNotFound">Δεν βρέθηκε ασθενής με το δοσμένο ΑΜΚΑ.</string>
    <string name="amkaFound">Βρέθηκε ασθενής που να αντιστοιχεί στο δοσμένο ΑΜΚΑ:</string>
    <string name="showHistory">Προβολή Ιστορικού</string>
    <string name="surname">Επίθετο Ασθενή</string>
    <string name="newPhysio">Νέο\nΦυσιοθεραπευτήριο</string>
    <string name="physioNameHint">π.χ. Body Care ||</string>
    <string name="physioName">Όνομα Φυσιοθεραπευτηρίου</string>
    <string name="addressHint">π.χ. Εγραντία 111</string>
    <string name="addressPrompt">Διεύθυνση</string>
    <string name="cancel">Ακύρωση</string>
    <string name="newPatient">Νέος Ασθενής</string>
    <string name="fullName">Ονοματεπώνυμο</string>
    <string name="fullNameHint">π.χ. Γιάννης Παπαδόπουλος</string>
    <string name="phoneNumber">Τηλέφωνο</string>
    <string name="phoneNumberHint">π.χ. 2310552222</string>
    <string name="amka">ΑΜΚΑ</string>
    <string name="amkaHint">π.χ. 012345678901</string>
    <string name="male">Άρρεν</string>
    <string name="female">Θύλη</string>
    <string name="gender">Φύλο</string>
    <string name="afm">ΑΦΜ</string>
    <string name="afmHint">π.χ. 123456789</string>
    <string name="createNewAmenity">Νέα Παροχή</string>
    <string name="amenityNameTitle">Όνομα Παροχής</string>
    <string name="backButtonDescription">Back</string>
    <string name="amenityNameExample">π.χ. Αθλητική Μάλαξη</string>
    <string name="amenityIDTitle">Κωδικός</string>
    <string name="amenityPriceTitle">Τιμή (€)</string>
    <string name="amenityIDExample">π.χ. ΜΞ001</string>
    <string name="amenityPriceExample">π.χ. 45</string>
    <string name="amenityDescriptionExample">π.χ. Είδος θεραπευτικού μασάζ…</string>
    <string name="amenityDescriptionTitle">Περιγραφή</string>
    <string name="amenitiesTitle">Παροχές</string>
    <string name="title">Τίτλος</string>
    <string name="IDCode">Κωδικός</string>
    <string name="costPerSession">%1$d / συνεδρία</string>
    <string name="description">Περιγραφή</string>
    <string name="expand_contract_card_description">expand/contract card description</string>
    <string name="searchBtnText">Αναζήτηση ραντεβού</string>
    <string name="comments">Παρατηρήσεις</string>
    <string name="complete">Ολοκλήρωση Ραντεβού</string>
    <string name="commentsExample">π.χ: Εντόπιση: Πού είναι; Ακτινοβολεί; Ποιότητα: Πώς είναι; Πώς το αισθάνεται; Ποσότητα/Σοβαρότητα: Πόσο σοβαρό είναι (πόνος 1-10) Χρονολογία: Πότε άρχισε; Πόσο διαρκεί; Πόσο συχνά; Συνθήκες πρόκλησης: Περιβαλλοντικοί παράγοντες, άσκηση, συγκινησιακή φόρτιση Παράγοντες που το υφίουν/επιδεινώνουν: Τί το βελτιώνει ή τί το επιδεινώνει; Συνοδά συμπτώματα: Μήπως έχετε παρατηρήσει άλλα συνοδά συμπτώματα;</string>
    <string name="currentAppointment">Τρέχον Ραντεβού</string>
    <string name="physio_name">Physio Name</string>
    <string name="price_mark">- € </string>
    <string name="title_activity_transactions">Κινήσεις</string>
    <string name="show_graph_txt">Προβολή Γράφων</string>
    <string name="dayHeader">Ημέρα</string>
    <string name="physioHeader">Φυσιοθεραπευτήριο</string>
    <string name="phoneHeader">Τηλέφωνο</string>
    <string name="requestedAppointments">Αιτήματα Ραντεβού</string>
    <string name="euro_sign">€</string>
    <string name="physio_graph_title">Έξοδα / Φυσιοθεραπευτήριο</string>
    <string name="provision_graph_title">Έξοδα / Παροχή</string>
    <string name="costHeader">Κόστος</string>
    <string name="dateHeader">Ημερομηνία</string>
    <string name="amenityHeader">Παροχή</string>
    <string name="amenitySearch">Αναζήτηση Παροχής</string>
    <string name="l_par">(</string>
    <string name="r_par">)</string>
    <string name="next">Επερχόμενο</string>
    <string name="createNewPhysio">Νέο Φυσιοθεραπευτήριο</string>
    <string name="PhysioNameTitle">Όνομα Φυσιοθεραπευτηρίου</string>
    <string name="physioNameExample">π.χ. BodyCare II</string>
    <string name="physioAdress">Διεύθυνση</string>
    <string name="physioAdressExample">π.χ. Εγνατία 111</string>
    <string name="physioPhoneExample">π.χ. 2310444443</string>
    <string name="physioSSNTitle">ΑΦΜ</string>
    <string name="physionSSNExample">π.χ. 123456789</string>
    <string name="physioPhoneTitle">Αριθμός Τηλεφώνου</string>
    <string name="physiosTitle">Φυσιοθεραπευτήρια</string>
    <string name="zero">0</string>
    <string name="patienthistory">Ιστορικό Ασθενή</string>
    <string name="general">Γενικά</string>
    <string name="requests">Αιτήματα</string>
    <string-array name="availableDays">
        <item>Δευτέρα</item>
        <item>Τρίτη</item>
        <item>Τετάρτη</item>
        <item>Πέμπτη</item>
        <item>Παρασκευή</item>
    </string-array>
    <string-array name="availableHours">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
    </string-array>
</resources>