<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMainColor"
    tools:context=".CreateNewPhysio">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        app:flexDirection="column"
        app:justifyContent="space_between">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newPhysio"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="7dp"
                    android:src="@drawable/angle_left_solid"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/physioName"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/physioNameHint"
                android:inputType="text"
                android:background="@drawable/input_textview"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressPrompt"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addressHint"
                android:inputType="text"
                android:background="@drawable/input_textview"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:justifyContent="space_between">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="column">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNumber"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:textSize="16sp"/>

                    <EditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phoneNumberHint"
                        android:inputType="text"
                        android:background="@drawable/input_textview"
                        android:textSize="16sp"/>
                </com.google.android.flexbox.FlexboxLayout>


                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="column">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/afm"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:textSize="16sp"/>

                    <EditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/afmHint"
                        android:inputType="text"
                        android:background="@drawable/input_textview"
                        android:textSize="16sp"/>

                </com.google.android.flexbox.FlexboxLayout>

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnCreatePhysio"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border_button"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtViewCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/cancel"
                    android:textColor="@color/greenButton"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnCreateNewPhysio"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_create"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtViewCreateNewPhysio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>